--- a/index.css
+++ b/index.css
@@ -16,7 +16,7 @@ body {
 .container {
   position: absolute;
   background: #e7eaf6;
-  width: auto;
+  width: 100%;
   min-height: 100vh;
   padding-bottom: 10px;
   display: flex;
@@ -96,15 +96,15 @@ header i {
 }
 
 .movie-info h3 {
-  font-size: 20px;
+  font-size: 1.5rem;
 }
 
 .movie-info p {
-  font-size: 14px;
+  font-size: 1rem;
 }
 
 .movie-info .description {
-  font-size: 16px;
+  font-size: 1rem;
   letter-spacing: 1px;
 }
 
@@ -159,14 +159,15 @@ header i {
   display: block;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 45px;
   border-radius: 10px;
-  max-width: 400px;
+  width: 40%;
+  /* max-width: 400px;
   max-height: 350px;
   width: auto;
-  height: auto;
+  height: auto; */
 }
 
 .movie-info {
-  min-width: 670px;
+  width: 50%;
   display: flex;
   flex-direction: column;
   gap: 11px;
@@ -181,7 +182,7 @@ header i {
 .movie-info .actions {
   display: flex;
   align-items: center;
-  gap: 50px;
+  gap: 5%;
 }
 
 .watchlist {
@@ -192,7 +193,7 @@ header i {
 
 .watchlist button {
   font-family: inherit;
-  font-size: 12px;
+  font-size: 0.8rem;
   color: white;
   font-weight: bold;
   letter-spacing: 1px;
@@ -240,4 +241,10 @@ a {
 .removed {
   color: red;
   border: 4px solid red;
+}
+
+@media only screen and (max-width: 600px) {
+  html {
+    font-size: 10px;
+  }
 }
